# GEANT4_IBM

./: .gitignore  CMakeLists.txt  energies_calc.py  hist.py  ibm.cc  note.txt  numbers.txt  plot_efficiency.py  plot_efficiency_2.py  plot_initial_gas_energies.C  stacked_hist.C
include/: ActionInitialization.hh  DetectorConstruction.hh  PhysicsList.hh  PrimaryGenerator.hh  RunAction.hh  SensitiveDetector.hh
macros/: run.mac  vis.mac
run_1/: efficiency.txt  energies.txt  note.txt
run_2/: efficiency.txt  energies.txt  note.txt
src/: ActionInitialization.cc  DetectorConstruction.cc  PhysicsList.cc  PrimaryGenerator.cc  RunAction.cc  SensitiveDetector.cc
